@@ -1,33 +1,44 @@
 package com.syn.data.service;
 
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.syn.data.entity.AlertConfigEntity;
+import com.syn.data.entity.AlertLogEntity;
+import com.syn.data.mapper.AlertConfigMapper;
+import com.syn.data.mapper.AlertLogMapper;
+import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
-/**
- * 告警服务
- * 负责告警规则配置和通知
- */
 @Slf4j
 @Service
 public class AlertService {
 
-    /**
-     * 告警规则配置
-     */
     public static class AlertRule {
         private Long id;
         private String name;
-        private String type; // failure, timeout, dataVolume, delay, quality
+        private String type;
         private String condition;
-        private String severity; // low, medium, high
+        private String severity;
         private boolean enabled;
-        private List<String> notificationMethods; // email, wechat, dingtalk, sms, phone
+        private List<String> notificationMethods;
         private List<String> recipients;
         private String description;
 
-        // Getters and setters
         public Long getId() { return id; }
         public void setId(Long id) { this.id = id; }
         public String getName() { return name; }
@@ -48,9 +59,6 @@ public class AlertService {
         public void setDescription(String description) { this.description = description; }
     }
 
-    /**
-     * 告警记录
-     */
     public static class AlertRecord {
         private Long id;
         private Long ruleId;
@@ -60,9 +68,8 @@ public class AlertService {
         private String message;
         private Date createTime;
         private Date resolveTime;
-        private String status; // active, resolved
+        private String status;
 
-        // Getters and setters
         public Long getId() { return id; }
         public void setId(Long id) { this.id = id; }
         public Long getRuleId() { return ruleId; }
@@ -83,344 +90,287 @@ public class AlertService {
         public void setStatus(String status) { this.status = status; }
     }
 
-    // 模拟告警规则存储
-    private final List<AlertRule> alertRules = new ArrayList<>();
-    // 模拟告警记录存储
-    private final List<AlertRecord> alertRecords = new ArrayList<>();
+    @Resource
+    private AlertConfigMapper alertConfigMapper;
 
-    public AlertService() {
-        // 初始化默认告警规则
-        initDefaultRules();
-    }
+    @Resource
+    private AlertLogMapper alertLogMapper;
 
-    /**
-     * 初始化默认告警规则
-     */
-    private void initDefaultRules() {
-        AlertRule rule1 = new AlertRule();
-        rule1.setId(1L);
-        rule1.setName("任务失败告警");
-        rule1.setType("failure");
-        rule1.setCondition("任务执行失败");
-        rule1.setSeverity("high");
-        rule1.setEnabled(true);
-        rule1.setNotificationMethods(Arrays.asList("email", "wechat"));
-        rule1.setRecipients(Arrays.asList("admin@example.com", "user@example.com"));
-        rule1.setDescription("当同步任务执行失败时触发告警");
-        alertRules.add(rule1);
-
-        AlertRule rule2 = new AlertRule();
-        rule2.setId(2L);
-        rule2.setName("任务超时告警");
-        rule2.setType("timeout");
-        rule2.setCondition("执行时间超过30分钟");
-        rule2.setSeverity("medium");
-        rule2.setEnabled(true);
-        rule2.setNotificationMethods(Arrays.asList("email"));
-        rule2.setRecipients(Arrays.asList("admin@example.com"));
-        rule2.setDescription("当同步任务执行时间超过30分钟时触发告警");
-        alertRules.add(rule2);
-
-        AlertRule rule3 = new AlertRule();
-        rule3.setId(3L);
-        rule3.setName("数据量异常告警");
-        rule3.setType("dataVolume");
-        rule3.setCondition("数据量波动超过50%");
-        rule3.setSeverity("medium");
-        rule3.setEnabled(true);
-        rule3.setNotificationMethods(Arrays.asList("email"));
-        rule3.setRecipients(Arrays.asList("admin@example.com"));
-        rule3.setDescription("当同步数据量波动超过50%时触发告警");
-        alertRules.add(rule3);
-    }
-
-    /**
-     * 获取所有告警规则
-     */
     public List<AlertRule> getAlertRules() {
-        return alertRules;
+        return alertConfigMapper.selectList(
+                new QueryWrapper<AlertConfigEntity>()
+                        .orderByDesc("updated_at")
+                        .orderByDesc("id")
+        ).stream().map(this::toRule).toList();
     }
 
-    /**
-     * 根据ID获取告警规则
-     */
     public AlertRule getAlertRuleById(Long id) {
-        return alertRules.stream()
-                .filter(rule -> rule.getId().equals(id))
-                .findFirst()
-                .orElse(null);
+        AlertConfigEntity entity = alertConfigMapper.selectById(id);
+        return entity == null ? null : toRule(entity);
     }
 
-    /**
-     * 创建告警规则
-     */
     public AlertRule createAlertRule(AlertRule rule) {
-        long newId = alertRules.size() + 1;
-        rule.setId(newId);
-        rule.setEnabled(true);
-        alertRules.add(rule);
-        return rule;
+        AlertConfigEntity entity = toEntity(rule);
+        entity.setEnabled(rule.isEnabled() ? 1 : 0);
+        entity.setCreatedAt(LocalDateTime.now());
+        entity.setUpdatedAt(LocalDateTime.now());
+        alertConfigMapper.insert(entity);
+        return toRule(entity);
     }
 
-    /**
-     * 更新告警规则
-     */
     public AlertRule updateAlertRule(AlertRule rule) {
-        AlertRule existingRule = getAlertRuleById(rule.getId());
-        if (existingRule != null) {
-            existingRule.setName(rule.getName());
-            existingRule.setType(rule.getType());
-            existingRule.setCondition(rule.getCondition());
-            existingRule.setSeverity(rule.getSeverity());
-            existingRule.setEnabled(rule.isEnabled());
-            existingRule.setNotificationMethods(rule.getNotificationMethods());
-            existingRule.setRecipients(rule.getRecipients());
-            existingRule.setDescription(rule.getDescription());
+        AlertConfigEntity existing = alertConfigMapper.selectById(rule.getId());
+        if (existing == null) {
+            return null;
         }
-        return existingRule;
+        existing.setName(rule.getName());
+        existing.setType(rule.getType());
+        existing.setThreshold(rule.getCondition());
+        existing.setLevel(rule.getSeverity());
+        existing.setEnabled(rule.isEnabled() ? 1 : 0);
+        existing.setNotificationMethods(join(rule.getNotificationMethods()));
+        existing.setRecipients(join(rule.getRecipients()));
+        existing.setDescription(rule.getDescription());
+        existing.setUpdatedAt(LocalDateTime.now());
+        alertConfigMapper.updateById(existing);
+        return toRule(existing);
     }
 
-    /**
-     * 删除告警规则
-     */
     public boolean deleteAlertRule(Long id) {
-        return alertRules.removeIf(rule -> rule.getId().equals(id));
+        return alertConfigMapper.deleteById(id) > 0;
     }
 
-    /**
-     * 启用/禁用告警规则
-     */
     public boolean toggleAlertRule(Long id, boolean enabled) {
-        AlertRule rule = getAlertRuleById(id);
-        if (rule != null) {
-            rule.setEnabled(enabled);
-            return true;
+        AlertConfigEntity entity = alertConfigMapper.selectById(id);
+        if (entity == null) {
+            return false;
         }
-        return false;
+        entity.setEnabled(enabled ? 1 : 0);
+        entity.setUpdatedAt(LocalDateTime.now());
+        return alertConfigMapper.updateById(entity) > 0;
     }
 
-    /**
-     * 获取告警记录
-     */
     public List<AlertRecord> getAlertRecords(int limit, String status) {
-        List<AlertRecord> filteredRecords = alertRecords;
-        if (status != null) {
-            filteredRecords = alertRecords.stream()
-                    .filter(record -> status.equals(record.getStatus()))
-                    .collect(java.util.stream.Collectors.toList());
+        QueryWrapper<AlertLogEntity> wrapper = new QueryWrapper<AlertLogEntity>()
+                .orderByDesc("created_at")
+                .orderByDesc("id");
+        if (status != null && !status.isBlank()) {
+            wrapper.eq("status", status);
         }
-        return filteredRecords.stream()
-                .sorted((a, b) -> b.getCreateTime().compareTo(a.getCreateTime()))
-                .limit(limit)
-                .collect(java.util.stream.Collectors.toList());
+        if (limit > 0) {
+            wrapper.last("limit " + limit);
+        }
+        return alertLogMapper.selectList(wrapper).stream().map(this::toRecord).toList();
     }
 
-    /**
-     * 触发告警
-     */
     public AlertRecord triggerAlert(String type, String severity, String message, Long ruleId) {
-        AlertRecord record = new AlertRecord();
-        record.setId((long) (alertRecords.size() + 1));
-        record.setRuleId(ruleId);
-        record.setRuleName(ruleId != null ? getAlertRuleById(ruleId).getName() : "手动告警");
-        record.setType(type);
-        record.setSeverity(severity);
-        record.setMessage(message);
-        record.setCreateTime(new Date());
-        record.setStatus("active");
+        AlertConfigEntity rule = ruleId == null ? null : alertConfigMapper.selectById(ruleId);
+        AlertLogEntity entity = new AlertLogEntity();
+        entity.setAlertId(ruleId);
+        entity.setAlertName(rule != null ? rule.getName() : "手动告警");
+        entity.setType(type);
+        entity.setLevel(severity);
+        entity.setMessage(message);
+        entity.setStatus("pending");
+        entity.setRecipients(rule != null ? rule.getRecipients() : "");
+        entity.setCreatedAt(LocalDateTime.now());
 
-        alertRecords.add(record);
-
-        // 发送通知
-        sendNotification(record);
-
-        log.info("告警触发: {} - {}", severity, message);
-        return record;
+        boolean sent = sendNotification(entity, rule);
+        entity.setStatus(sent ? "sent" : "failed");
+        entity.setSendTime(LocalDateTime.now());
+        alertLogMapper.insert(entity);
+        return toRecord(entity);
     }
 
-    /**
-     * 解决告警
-     */
     public boolean resolveAlert(Long id) {
-        AlertRecord record = alertRecords.stream()
-                .filter(r -> r.getId().equals(id))
-                .findFirst()
-                .orElse(null);
-        if (record != null) {
-            record.setResolveTime(new Date());
-            record.setStatus("resolved");
-            return true;
+        AlertLogEntity entity = alertLogMapper.selectById(id);
+        if (entity == null) {
+            return false;
         }
-        return false;
+        entity.setStatus("resolved");
+        entity.setSendTime(LocalDateTime.now());
+        return alertLogMapper.updateById(entity) > 0;
     }
 
-    /**
-     * 发送告警通知
-     */
-    private void sendNotification(AlertRecord record) {
-        // 简化实现，实际应该调用对应的通知服务
-        log.info("发送告警通知: {} - {}", record.getSeverity(), record.getMessage());
-        
-        // 模拟发送不同类型的通知
-        if (record.getRuleId() != null) {
-            AlertRule rule = getAlertRuleById(record.getRuleId());
-            if (rule != null && rule.isEnabled()) {
-                for (String method : rule.getNotificationMethods()) {
-                    switch (method) {
-                        case "email":
-                            sendEmailNotification(record, rule.getRecipients());
-                            break;
-                        case "wechat":
-                            sendWechatNotification(record, rule.getRecipients());
-                            break;
-                        case "dingtalk":
-                            sendDingtalkNotification(record, rule.getRecipients());
-                            break;
-                        case "sms":
-                            sendSmsNotification(record, rule.getRecipients());
-                            break;
-                        case "phone":
-                            sendPhoneNotification(record, rule.getRecipients());
-                            break;
-                    }
-                }
-            }
-        }
-    }
-
-    /**
-     * 发送邮件通知
-     */
-    private void sendEmailNotification(AlertRecord record, List<String> recipients) {
-        log.info("发送邮件通知给 {}: {} - {}", recipients, record.getSeverity(), record.getMessage());
-        // 实际实现：调用邮件服务发送邮件
-    }
-
-    /**
-     * 发送企业微信通知
-     */
-    private void sendWechatNotification(AlertRecord record, List<String> recipients) {
-        log.info("发送企业微信通知给 {}: {} - {}", recipients, record.getSeverity(), record.getMessage());
-        // 实际实现：调用企业微信API发送通知
-    }
-
-    /**
-     * 发送钉钉通知
-     */
-    private void sendDingtalkNotification(AlertRecord record, List<String> recipients) {
-        log.info("发送钉钉通知给 {}: {} - {}", recipients, record.getSeverity(), record.getMessage());
-        // 实际实现：调用钉钉API发送通知
-    }
-
-    /**
-     * 发送短信通知
-     */
-    private void sendSmsNotification(AlertRecord record, List<String> recipients) {
-        log.info("发送短信通知给 {}: {} - {}", recipients, record.getSeverity(), record.getMessage());
-        // 实际实现：调用短信服务发送短信
-    }
-
-    /**
-     * 发送电话通知
-     */
-    private void sendPhoneNotification(AlertRecord record, List<String> recipients) {
-        log.info("发送电话通知给 {}: {} - {}", recipients, record.getSeverity(), record.getMessage());
-        // 实际实现：调用电话服务发送语音通知
-    }
-
-    /**
-     * 获取告警统计数据
-     */
     public Map<String, Object> getAlertStats(String timeRange) {
+        List<AlertLogEntity> records = listRecordsWithinRange(timeRange);
         Map<String, Object> stats = new HashMap<>();
-        
-        // 统计不同类型的告警数量
-        Map<String, Long> typeStats = alertRecords.stream()
-                .filter(record -> isWithinTimeRange(record.getCreateTime(), timeRange))
-                .collect(java.util.stream.Collectors.groupingBy(AlertRecord::getType, java.util.stream.Collectors.counting()));
-        stats.put("typeStats", typeStats);
-
-        // 统计不同严重程度的告警数量
-        Map<String, Long> severityStats = alertRecords.stream()
-                .filter(record -> isWithinTimeRange(record.getCreateTime(), timeRange))
-                .collect(java.util.stream.Collectors.groupingBy(AlertRecord::getSeverity, java.util.stream.Collectors.counting()));
-        stats.put("severityStats", severityStats);
-
-        // 统计告警状态
-        Map<String, Long> statusStats = alertRecords.stream()
-                .filter(record -> isWithinTimeRange(record.getCreateTime(), timeRange))
-                .collect(java.util.stream.Collectors.groupingBy(AlertRecord::getStatus, java.util.stream.Collectors.counting()));
-        stats.put("statusStats", statusStats);
-
-        // 统计告警趋势
-        List<Map<String, Object>> trendData = getAlertTrend(timeRange);
-        stats.put("trendData", trendData);
-
+        stats.put("typeStats", records.stream().collect(Collectors.groupingBy(AlertLogEntity::getType, Collectors.counting())));
+        stats.put("severityStats", records.stream().collect(Collectors.groupingBy(AlertLogEntity::getLevel, Collectors.counting())));
+        stats.put("statusStats", records.stream().collect(Collectors.groupingBy(AlertLogEntity::getStatus, Collectors.counting())));
+        stats.put("trendData", getAlertTrend(records, resolveStartTime(timeRange)));
         return stats;
     }
 
-    /**
-     * 获取告警趋势
-     */
-    private List<Map<String, Object>> getAlertTrend(String timeRange) {
-        List<Map<String, Object>> trendData = new ArrayList<>();
-        
-        // 模拟趋势数据
-        for (int i = 0; i < 7; i++) {
-            Map<String, Object> data = new HashMap<>();
-            data.put("date", new Date(System.currentTimeMillis() - i * 24 * 60 * 60 * 1000));
-            data.put("alertCount", 5 + (i % 3));
-            trendData.add(data);
-        }
-        
-        return trendData;
-    }
-
-    /**
-     * 判断时间是否在指定范围内
-     */
-    private boolean isWithinTimeRange(Date date, String timeRange) {
-        // 简化实现，实际应该根据时间范围进行判断
-        return true;
-    }
-
-    /**
-     * 测试告警通知
-     */
     public Map<String, Object> testAlertNotification(String method, List<String> recipients) {
         Map<String, Object> result = new HashMap<>();
-        
         try {
-            // 模拟发送测试通知
-            log.info("测试告警通知: {} - {}", method, recipients);
-            
-            switch (method) {
-                case "email":
-                    sendEmailNotification(null, recipients);
-                    break;
-                case "wechat":
-                    sendWechatNotification(null, recipients);
-                    break;
-                case "dingtalk":
-                    sendDingtalkNotification(null, recipients);
-                    break;
-                case "sms":
-                    sendSmsNotification(null, recipients);
-                    break;
-                case "phone":
-                    sendPhoneNotification(null, recipients);
-                    break;
+            AlertLogEntity record = new AlertLogEntity();
+            record.setLevel("info");
+            record.setMessage("测试告警通知");
+            switch (method.toLowerCase(Locale.ROOT)) {
+                case "email" -> sendEmailNotification(record, recipients);
+                case "wechat" -> sendWechatNotification(record, recipients);
+                case "dingtalk" -> sendDingtalkNotification(record, recipients);
+                case "sms" -> sendSmsNotification(record, recipients);
+                case "phone" -> sendPhoneNotification(record, recipients);
+                default -> log.info("测试通知仅记录日志: {}", method);
             }
-            
             result.put("success", true);
             result.put("message", "测试通知发送成功");
-            
         } catch (Exception e) {
             result.put("success", false);
             result.put("message", "测试通知发送失败: " + e.getMessage());
         }
-        
         return result;
     }
 
+    private boolean sendNotification(AlertLogEntity record, AlertConfigEntity rule) {
+        List<String> methods = rule != null ? split(rule.getNotificationMethods()) : List.of("log");
+        List<String> recipients = rule != null ? split(rule.getRecipients()) : List.of();
+        try {
+            for (String method : methods) {
+                switch (method.toLowerCase(Locale.ROOT)) {
+                    case "email" -> sendEmailNotification(record, recipients);
+                    case "wechat" -> sendWechatNotification(record, recipients);
+                    case "dingtalk" -> sendDingtalkNotification(record, recipients);
+                    case "sms" -> sendSmsNotification(record, recipients);
+                    case "phone" -> sendPhoneNotification(record, recipients);
+                    default -> log.info("记录告警通知: {} - {}", record.getLevel(), record.getMessage());
+                }
+            }
+            return true;
+        } catch (Exception e) {
+            log.error("发送告警通知失败", e);
+            return false;
+        }
+    }
+
+    private void sendEmailNotification(AlertLogEntity record, List<String> recipients) {
+        log.info("发送邮件通知给 {}: {} - {}", recipients, record.getLevel(), record.getMessage());
+    }
+
+    private void sendWechatNotification(AlertLogEntity record, List<String> recipients) {
+        log.info("发送企业微信通知给 {}: {} - {}", recipients, record.getLevel(), record.getMessage());
+    }
+
+    private void sendDingtalkNotification(AlertLogEntity record, List<String> recipients) {
+        log.info("发送钉钉通知给 {}: {} - {}", recipients, record.getLevel(), record.getMessage());
+    }
+
+    private void sendSmsNotification(AlertLogEntity record, List<String> recipients) {
+        log.info("发送短信通知给 {}: {} - {}", recipients, record.getLevel(), record.getMessage());
+    }
+
+    private void sendPhoneNotification(AlertLogEntity record, List<String> recipients) {
+        log.info("发送电话通知给 {}: {} - {}", recipients, record.getLevel(), record.getMessage());
+    }
+
+    private List<AlertLogEntity> listRecordsWithinRange(String timeRange) {
+        return alertLogMapper.selectList(
+                new QueryWrapper<AlertLogEntity>()
+                        .ge("created_at", resolveStartTime(timeRange))
+                        .orderByAsc("created_at")
+                        .orderByAsc("id")
+        );
+    }
+
+    private List<Map<String, Object>> getAlertTrend(List<AlertLogEntity> records, LocalDateTime startTime) {
+        Map<LocalDate, Long> grouped = records.stream()
+                .collect(Collectors.groupingBy(item -> item.getCreatedAt().toLocalDate(), Collectors.counting()));
+        List<Map<String, Object>> trendData = new ArrayList<>();
+        for (LocalDate cursor = startTime.toLocalDate(); !cursor.isAfter(LocalDate.now()); cursor = cursor.plusDays(1)) {
+            Map<String, Object> item = new LinkedHashMap<>();
+            item.put("date", cursor.toString());
+            item.put("alertCount", grouped.getOrDefault(cursor, 0L));
+            trendData.add(item);
+        }
+        return trendData;
+    }
+
+    private LocalDateTime resolveStartTime(String timeRange) {
+        if (timeRange == null || timeRange.isBlank()) {
+            return LocalDateTime.now().minusDays(7);
+        }
+        String normalized = timeRange.trim().toLowerCase(Locale.ROOT);
+        if (normalized.endsWith("d")) {
+            return LocalDateTime.now().minusDays(Long.parseLong(normalized.substring(0, normalized.length() - 1)));
+        }
+        if (normalized.endsWith("h")) {
+            return LocalDateTime.now().minusHours(Long.parseLong(normalized.substring(0, normalized.length() - 1)));
+        }
+        return LocalDateTime.now().minusDays(7);
+    }
+
+    private AlertRule toRule(AlertConfigEntity entity) {
+        AlertRule rule = new AlertRule();
+        rule.setId(entity.getId());
+        rule.setName(entity.getName());
+        rule.setType(entity.getType());
+        rule.setCondition(entity.getThreshold());
+        rule.setSeverity(entity.getLevel());
+        rule.setEnabled(entity.getEnabled() != null && entity.getEnabled() == 1);
+        rule.setNotificationMethods(split(entity.getNotificationMethods()));
+        rule.setRecipients(split(entity.getRecipients()));
+        rule.setDescription(entity.getDescription());
+        return rule;
+    }
+
+    private AlertConfigEntity toEntity(AlertRule rule) {
+        AlertConfigEntity entity = new AlertConfigEntity();
+        entity.setId(rule.getId());
+        entity.setName(rule.getName());
+        entity.setType(rule.getType());
+        entity.setThreshold(rule.getCondition());
+        entity.setLevel(rule.getSeverity());
+        entity.setNotificationMethods(join(rule.getNotificationMethods()));
+        entity.setRecipients(join(rule.getRecipients()));
+        entity.setDescription(rule.getDescription());
+        return entity;
+    }
+
+    private AlertRecord toRecord(AlertLogEntity entity) {
+        AlertRecord record = new AlertRecord();
+        record.setId(entity.getId());
+        record.setRuleId(entity.getAlertId());
+        record.setRuleName(entity.getAlertName());
+        record.setType(entity.getType());
+        record.setSeverity(entity.getLevel());
+        record.setMessage(entity.getMessage());
+        record.setCreateTime(toDate(entity.getCreatedAt()));
+        record.setResolveTime(toDate(entity.getSendTime()));
+        record.setStatus(entity.getStatus());
+        return record;
+    }
+
+    private Date toDate(LocalDateTime value) {
+        if (value == null) {
+            return null;
+        }
+        Instant instant = value.atZone(ZoneId.systemDefault()).toInstant();
+        return Date.from(instant);
+    }
+
+    private List<String> split(String csv) {
+        if (csv == null || csv.isBlank()) {
+            return List.of();
+        }
+        return Arrays.stream(csv.split(","))
+                .map(String::trim)
+                .filter(item -> !item.isEmpty())
+                .distinct()
+                .toList();
+    }
+
+    private String join(List<String> values) {
+        if (values == null || values.isEmpty()) {
+            return "";
+        }
+        return values.stream()
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .filter(item -> !item.isEmpty())
+                .distinct()
+                .collect(Collectors.joining(","));
+    }
 }
